--- a/embed/list_directory.html
+++ b/embed/list_directory.html
@@ -204,6 +204,20 @@
         <div class='ma2 tr'><a href='/{{ join "files" $.SitePrefix "createfile" }}/?parent={{ $.FilePath }}' class='nowrap'>📄 create file</a></div>
         <div class='ma2 tr'><a href='/{{ join "files" $.SitePrefix "createfolder" }}?parent={{ $.FilePath }}' class='nowrap'>📂 create folder</a></div>
         {{- end }}
+        <hr>
+        <form method='post' action='/{{ join "files" $.SitePrefix "uploadfile" }}/' class='pa2'>
+          <input type='hidden' name='parent' value='{{ $.FilePath }}'>
+          {{- $accept := "" }}
+          {{- if eq (head $.FilePath) "pages" }}
+          {{- $accept = ".html" }}
+          {{- else if eq (head $.FilePath) "posts" }}
+          {{- $accept = ".md" }}
+          {{- else }}
+          {{- $accept = ".jpeg,.jpg,.png,.webp,.gif,.html,.css,.js,.md,.txt" }}
+          {{- end }}
+          <input type='file' name='file' style='max-width: 220px;' accept='{{ $accept }}' multiple>
+          <button type='submit' class='button ba br2 pa2 w-100 mt2'>upload</button>
+        </form>
       </div>
     </details>
   </div>
@@ -453,5 +467,12 @@
 {{- define "heroicons-trash" }}
 <svg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='1.5' stroke='currentColor'  width='16' height='16'>
   <path stroke-linecap='round' stroke-linejoin='round' d='m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0' />
+</svg>
+{{- end }}
+
+{{- define "octicons-upload" }}
+<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' width='16' height='16'>
+  <path d='M2.75 14A1.75 1.75 0 0 1 1 12.25v-2.5a.75.75 0 0 1 1.5 0v2.5c0 .138.112.25.25.25h10.5a.25.25 0 0 0 .25-.25v-2.5a.75.75 0 0 1 1.5 0v2.5A1.75 1.75 0 0 1 13.25 14Z'></path>
+  <path d='M11.78 4.72a.749.749 0 1 1-1.06 1.06L8.75 3.811V9.5a.75.75 0 0 1-1.5 0V3.811L5.28 5.78a.749.749 0 1 1-1.06-1.06l3.25-3.25a.749.749 0 0 1 1.06 0l3.25 3.25Z'></path>
 </svg>
 {{- end }}
