--- a/embed/createfile.html
+++ b/embed/createfile.html
@@ -48,6 +48,8 @@
         {{- else }}
         Create a new file for <a href='/{{ join "files" $.SitePrefix "pages" (tail $.Parent) }}.html'>{{ base $.Parent }}.html</a>
         {{- end }}
+      {{- else }}
+      Create a new file in <a href='/{{ join "files" $.SitePrefix $.Parent }}/'>{{ base $.Parent }}/</a>
       {{- end }}
     </h1>
     <div class='flex-grow-1'></div>
@@ -71,9 +73,9 @@
   </div>
   <input type='hidden' name='parent' value='{{ $.Parent }}'>
   <div class='mv3'>
-    <div><label for='name' class='b'>Name:</label></div>
+    <div><label for='name' class='b'>Name{{ if eq (head $.Parent) "notes" "posts" }} (optional){{ end }}:</label></div>
     <div class='flex'>
-      <input id='name' name='name' value='{{ $.Name }}' class='pv1 ph2 br2 ba flex-grow-1{{ if index $.FormErrors "name" }} b--invalid-red{{ end }}' autocomplete='on' autofocus>
+      <input id='name' name='name' value='{{ $.Name }}' class='pv1 ph2 br2 ba flex-grow-1{{ if index $.FormErrors "name" }} b--invalid-red{{ end }}' autocomplete='on'{{ if not (eq (head $.Parent) "notes" "posts") }} autofocus{{ end }}>
       <select name='ext' class='br2 ml2{{ if index $.FormErrors "name" }} b--invalid-red{{ end }}'>
         {{- if eq (head $.Parent) "notes" }}
         <option{{ if eq $.Ext ".html" }} selected{{ end }}>.html</option>
@@ -107,7 +109,7 @@
     </ul>
   </div>
   <div data-codemirror>
-    <textarea id='content' name='content' dir='auto' class='w-100 pa2 min-h5 h6 resize-vertical code'>{{ $.Content }}</textarea>
+    <textarea id='content' name='content' dir='auto' class='w-100 pa2 min-h5 h6 resize-vertical code'{{ if eq (head $.Parent) "notes" "posts" }} autofocus{{ end }}>{{ $.Content }}</textarea>
   </div>
   <button type='submit' class='button ba br2 pa2 mv3 w-100'>
     {{- if eq (head $.Parent) "pages" }}
