--- a/embed/list_root_directory.html
+++ b/embed/list_root_directory.html
@@ -122,7 +122,7 @@
       <a href='/{{ join "files" $.SitePrefix "notes" }}/'>notes/</a>
       <div class='flex-grow-1'></div>
       <details class='relative' data-autoclose-details>
-        <summary role='button' title='more information' class='flex items-center button ba br2 b--black h2 hide-marker ph1 pointer' data-disable-click-selection>
+        <summary role='button' class='flex items-center button ba br2 b--black h2 hide-marker ph1 pointer' data-disable-click-selection>
           {{ template "heroicons-question-mark-circle" }}
           {{ template "octicons-triangle-down" }}
         </summary>
@@ -139,7 +139,7 @@
       <a href='/{{ join "files" $.SitePrefix "pages" }}/'>pages/</a>
       <div class='flex-grow-1'></div>
       <details class='relative' data-autoclose-details>
-        <summary role='button' title='more information' class='flex items-center button ba br2 b--black h2 hide-marker ph1 pointer' data-disable-click-selection>
+        <summary role='button' class='flex items-center button ba br2 b--black h2 hide-marker ph1 pointer' data-disable-click-selection>
           {{ template "heroicons-question-mark-circle" }}
           {{ template "octicons-triangle-down" }}
         </summary>
@@ -160,7 +160,7 @@
       <a href='/{{ join "files" $.SitePrefix "posts" }}/'>posts/</a>
       <div class='flex-grow-1'></div>
       <details class='relative' data-autoclose-details>
-        <summary role='button' title='more information' class='flex items-center button ba br2 b--black h2 hide-marker ph1 pointer' data-disable-click-selection>
+        <summary role='button' class='flex items-center button ba br2 b--black h2 hide-marker ph1 pointer' data-disable-click-selection>
           {{ template "heroicons-question-mark-circle" }}
           {{ template "octicons-triangle-down" }}
         </summary>
@@ -177,7 +177,7 @@
       <a href='/{{ join "files" $.SitePrefix "output/themes" }}/'>themes/</a>
       <div class='flex-grow-1'></div>
       <details class='relative' data-autoclose-details>
-        <summary role='button' title='more information' class='flex items-center button ba br2 b--black h2 hide-marker ph1 pointer' data-disable-click-selection>
+        <summary role='button' class='flex items-center button ba br2 b--black h2 hide-marker ph1 pointer' data-disable-click-selection>
           {{ template "heroicons-question-mark-circle" }}
           {{ template "octicons-triangle-down" }}
         </summary>
@@ -196,7 +196,7 @@
       <a href='/{{ join "files" $.SitePrefix "output" }}/'>output/</a>
       <div class='flex-grow-1'></div>
       <details class='relative' data-autoclose-details>
-        <summary role='button' title='more information' class='flex items-center button ba br2 b--black h2 hide-marker ph1 pointer' data-disable-click-selection>
+        <summary role='button' class='flex items-center button ba br2 b--black h2 hide-marker ph1 pointer' data-disable-click-selection>
           {{ template "heroicons-question-mark-circle" }}
           {{ template "octicons-triangle-down" }}
         </summary>
@@ -204,7 +204,7 @@
           <div class='ma2' style='min-width: 10rem;'>
             Contains your site's output files.
             <br><br>
-            <div class='f6' style='font-style: italic;'>More information: Notebrew is a static site generator that converts your pages and posts into static files. This is where the files are kept.</div>
+            <div class='f6' style='font-style: italic;'>Details: Notebrew is a static site generator that converts your pages and posts into static files. This is where the files are kept.</div>
           </div>
         </div>
       </details>
