--- a/embed/list_root_directory.html
+++ b/embed/list_root_directory.html
@@ -204,7 +204,7 @@
           <div class='ma2' style='min-width: 10rem;'>
             Contains your site's output files.
             <br><br>
-            <div class='f6' style='font-style: italic;'>Details: Notebrew is a static site generator that converts your pages and posts into static files. This is where the files are kept.</div>
+            <div class='f6' style='font-style: italic;'>Details:<br>Notebrew is a static site generator that converts your pages and posts into static files. This is where the files are kept.</div>
           </div>
         </div>
       </details>
