--- a/embed/list_root_directory.html
+++ b/embed/list_root_directory.html
@@ -77,6 +77,18 @@
       </div>
     </details>
   </div>
+  <div class='flex items-center'>
+    <details class='relative ml2' data-autoclose-details>
+      <summary role='button' title='Create' class='pointer flex items-center button ba br2 b--black ph2 h2 hide-marker' data-disable-click-selection>
+        {{ template "octicons-plus" }}
+        {{ template "octicons-triangle-down" }}
+      </summary>
+      <div class='absolute bg-white br2' style='top: calc(2rem + 4px); right: 0px; z-index: 1000; border: 1px solid black;'>
+        <div class='ma2 tr'><a href='/{{ join "files" $.SitePrefix "createfile" }}/?parent={{ join $.FilePath "notes" }}' class='nowrap'>📓 create note</a></div>
+        <div class='ma2 tr'><a href='/{{ join "files" $.SitePrefix "createfile" }}/?parent={{ join $.FilePath "posts" }}' class='nowrap'>📄 create post</a></div>
+      </div>
+    </details>
+  </div>
   {{- if $.SearchSupported }}
   <div class='flex items-center'>
     <details class='relative ml2' data-autoclose-details>
