--- a/embed/createfile.html
+++ b/embed/createfile.html
@@ -26,7 +26,7 @@
   <div class='mv3 b tc'>Can't create a file here.</div>
 </div>
 {{- else }}
-<form method='post' action='/{{ join "files" $.SitePrefix "createfile" }}/' class='mv2'>
+<form method='post' enctype='multipart/form-data' action='/{{ join "files" $.SitePrefix "createfile" }}/' class='mv2'>
   {{- if referer }}
   <div><a href='{{ referer }}' data-go-back>&larr; back</a></div>
   {{- else }}
@@ -106,6 +106,11 @@
   </div>
   <div data-codemirror>
     <textarea id='content' name='content' dir='auto' class='w-100 pa2 min-h5 h6 resize-vertical code'{{ if eq (head $.Parent) "notes" "posts" }} autofocus{{ end }}>{{ $.Content }}</textarea>
+  </div>
+  <div class='mt2'>
+    <div class='b'>Images:</div>
+    <div><input type='file' name='file' style='max-width: 220px;' accept='.jpeg,.jpg,.png,.webp,.gif' multiple></div>
+    <div><button type='button' class='button ba br2 pa2 mt2' data-paste='file'>paste from clipboard</button></div>
   </div>
   <button type='submit' class='button ba br2 pa2 mv3 w-100'>
     {{- if eq (head $.Parent) "pages" }}
