--- a/embed/list_root_directory.html
+++ b/embed/list_root_directory.html
@@ -85,7 +85,7 @@
       </summary>
       <div class='absolute bg-white br2' style='top: calc(2rem + 4px); right: 0px; z-index: 1000; border: 1px solid black;'>
         <div class='ma2 tr'><a href='/{{ join "files" $.SitePrefix "createfile" }}/?parent={{ join $.FilePath "notes" }}' class='nowrap'>📓 create note</a></div>
-        <div class='ma2 tr'><a href='/{{ join "files" $.SitePrefix "createfile" }}/?parent={{ join $.FilePath "posts" }}' class='nowrap'>📄 create post</a></div>
+        <div class='ma2 tr'><a href='/{{ join "files" $.SitePrefix "createfile" }}/?parent={{ join $.FilePath "posts" }}' class='nowrap'>📝 create post</a></div>
       </div>
     </details>
   </div>
