--- a/embed/createfile.html
+++ b/embed/createfile.html
@@ -115,7 +115,7 @@
   <div class='mt2'>
     <div class='b'>Images:</div>
     <div><input type='file' name='file' style='max-width: 220px;' accept='.jpeg,.jpg,.png,.webp,.gif' multiple></div>
-    <div><button type='button' class='button ba br2 pa2 mt2' data-paste='file'>paste from clipboard</button></div>
+    <div><input placeholder='paste clipboard here' class='mt2' data-paste='file'></div>
   </div>
   {{- end }}
   <button type='submit' class='button ba br2 pa2 mv3 w-100'>
