--- a/embed/list_directory.html
+++ b/embed/list_directory.html
@@ -212,13 +212,13 @@
           <input type='hidden' name='parent' value='{{ $.FilePath }}'>
           {{- if eq (head $.FilePath) "pages" }}
           <input type='file' name='file' style='max-width: 220px;' accept='.html' multiple>
-          <input placeholder='paste clipboard here' class='mt2' data-paste='{"name":"file","ext":[".html"]}'>
+          <input placeholder='paste from clipboard here' style='min-width: 200px;' class='mt2' data-paste='{"name":"file","ext":[".html"]}'>
           {{- else if eq (head $.FilePath) "posts" }}
           <input type='file' name='file' style='max-width: 220px;' accept='.md' multiple>
-          <input placeholder='paste clipboard here' class='mt2' data-paste='{"name":"file","ext":[".md"]}'>
+          <input placeholder='paste from clipboard here' style='min-width: 200px;' class='mt2' data-paste='{"name":"file","ext":[".md"]}'>
           {{- else }}
           <input type='file' name='file' style='max-width: 220px;' accept='.jpeg,.jpg,.png,.webp,.gif,.html,.css,.js,.md,.txt' multiple>
-          <input placeholder='paste clipboard here' class='mt2' data-paste='{"name":"file","ext":[".jpeg",".jpg",".png",".webp",".gif",".html",".css",".js",".md",".txt"]}'>
+          <input placeholder='paste from clipboard here' style='min-width: 200px;' class='mt2' data-paste='{"name":"file","ext":[".jpeg",".jpg",".png",".webp",".gif",".html",".css",".js",".md",".txt"]}'>
           {{- end }}
           <button type='submit' class='button ba br2 pa2 w-100 mt2'>upload</button>
         </form>
