--- a/embed/createfile.html
+++ b/embed/createfile.html
@@ -115,7 +115,7 @@
   <div class='mt2'>
     <div class='b'>Images:</div>
     <div><input type='file' name='file' style='max-width: 220px;' accept='.jpeg,.jpg,.png,.webp,.gif' multiple></div>
-    <div><input placeholder='paste clipboard here' style='min-width: 200px;' class='mt2' data-paste='{"name":"file","ext":[".jpeg",".jpg",".png",".webp",".gif"]}'></div>
+    <div><input placeholder='paste from clipboard here' style='min-width: 200px;' class='mt2' data-paste='{"name":"file","ext":[".jpeg",".jpg",".png",".webp",".gif"]}'></div>
   </div>
   {{- end }}
   <button type='submit' class='button ba br2 pa2 mv3 w-100'>
