--- a/embed/file.html
+++ b/embed/file.html
@@ -102,16 +102,7 @@
   <div class='flex-grow-1 truncate'>
     <a href='/{{ join "files" ($clipboard.Get "sitePrefix") ($clipboard.Get "parent") }}/'>{{ len (index $clipboard "name") }} file{{ if ne (len (index $clipboard "name")) 1 }}s{{ end }} {{ if $clipboard.Has "cut" }}cut{{ else }}copied{{ end }}</a>: {{ range $i, $name := index $clipboard "name" }}{{ if gt $i 0 }}, {{ end }}{{ $name }}{{ end }}
   </div>
-<<<<<<< Updated upstream
   {{- if eq $.FilePath "pages/index.html" }}
-=======
-  {{- if eq (head $.FilePath) "pages" }}
-  <form method='post' action='/{{ join "files" $.SitePrefix "clipboard/paste" }}/' class='ml2'>
-    <input type='hidden' name='parent' value='/{{ join "files" $.SitePrefix "output" (trimSuffix (tail $.FilePath) (ext $.FilePath)) }}/'>
-    <button type='submit' class='button ba br2 pv2 ph2'>paste</button>
-  </form>
-  {{- else if eq (head $.FilePath) "posts" }}
->>>>>>> Stashed changes
   <form method='post' action='/{{ join "files" $.SitePrefix "clipboard/paste" }}/' class='ml2'>
     <input type='hidden' name='parent' value='/{{ join "files" $.SitePrefix "output" }}/'>
     <button type='submit' class='button ba br2 pv2 ph2'>paste</button>
@@ -246,14 +237,14 @@
       <form method='post' enctype='multipart/form-data' action='/{{ join "files" $.SitePrefix "uploadfile" }}/' class='pa2'>
         <input type='hidden' name='parent' value='{{ join "output" (trimSuffix (tail $.FilePath) ".html") }}'>
         <input type='file' name='file' style='max-width: 220px;' accept='.jpeg,.jpg,.png,.webp,.gif,.html,.css,.js,.md,.txt' multiple>
-        <input placeholder='paste clipboard here' style='min-width: 200px;' class='mt2' data-paste='{"name":"file","ext":[".jpeg",".jpg",".png",".webp",".gif",".html",".css",".js",".md",".txt"]}'>
+        <input placeholder='paste from clipboard here' style='min-width: 200px;' class='mt2' data-paste='{"name":"file","ext":[".jpeg",".jpg",".png",".webp",".gif",".html",".css",".js",".md",".txt"]}'>
         <button type='submit' class='button ba br2 pa2 w-100 mt2'>upload</button>
       </form>
       {{- else }}
       <form method='post' enctype='multipart/form-data' action='/{{ join "files" $.SitePrefix "uploadfile" }}/' class='pa2'>
         <input type='hidden' name='parent' value='{{ join "output" (trimSuffix $.FilePath ".md") }}'>
         <input type='file' name='file' style='max-width: 220px;' accept='.jpeg,.jpg,.png,.webp,.gif' multiple>
-        <input placeholder='paste clipboard here' style='min-width: 200px;' class='mt2' data-paste='{"name":"file","ext":[".jpeg",".jpg",".png",".webp",".gif"]}'>
+        <input placeholder='paste from clipboard here' style='min-width: 200px;' class='mt2' data-paste='{"name":"file","ext":[".jpeg",".jpg",".png",".webp",".gif"]}'>
         <button type='submit' class='button ba br2 pa2 w-100 mt2'>upload</button>
       </form>
       {{- end }}
