--- a/embed/file.html
+++ b/embed/file.html
@@ -216,40 +216,29 @@
   <div data-codemirror>
     <textarea id='content' name='content' dir='auto' class='w-100 pa2 min-h5 h6 resize-vertical code' autofocus>{{ $.Content }}</textarea>
   </div>
-  <button type='submit' class='button ba br2 pa2 mv2 w-100'>save</button>
+  {{- if eq (head $.FilePath) "pages" "posts" }}
+  <div class='mt2'>
+    {{- if eq (head $.FilePath) "pages" }}
+    <div class='b'>Upload Assets:</div>
+    <div><input type='file' name='file' style='max-width: 220px;' accept='.jpeg,.jpg,.png,.webp,.gif,.css,.js,.md' multiple></div>
+    <div><input placeholder='paste from clipboard here' style='min-width: 200px;' class='mt2' data-paste='{"name":"file","ext":[".jpeg",".jpg",".png",".webp",".gif",".css",".js",".md"]}'></div>
+    {{- else if eq (head $.FilePath) "posts" }}
+    <div class='b'>Upload Images:</div>
+    <div><input type='file' name='file' style='max-width: 220px;' accept='.jpeg,.jpg,.png,.webp,.gif' multiple></div>
+    <div><input placeholder='paste from clipboard here' style='min-width: 200px;' class='mt2' data-paste='{"name":"file","ext":[".jpeg",".jpg",".png",".webp",".gif"]}'></div>
+    {{- end }}
+  </div>
+  {{- end }}
+  <button type='submit' class='button ba br2 pa2 mv3 w-100'>save</button>
 </form>
 {{- if eq (head $.FilePath) "pages" "posts" }}
 <div class='flex items-center'>
   {{- if eq (head $.FilePath) "pages" }}
   <span class='b'>Assets</span>
+  <div class='ma2'><a href='/{{ join "files" $.SitePrefix "createfile" }}/?parent={{ join "output" (trimSuffix (tail $.FilePath) ".html") }}' class='nowrap'>create file</a></div>
   {{- else }}
   <span class='b'>Images</span>
   {{- end }}
-  <details class='relative ml2' data-autoclose-details>
-    <summary role='button' title='Create' class='pointer flex items-center button ba br2 b--black ph2 h2 hide-marker' data-disable-click-selection>
-      {{ template "octicons-plus" }}
-      {{ template "octicons-triangle-down" }}
-    </summary>
-    <div class='absolute bg-white br2' style='top: calc(2rem + 4px); left: 0px; z-index: 1000; border: 1px solid black;'>
-      {{- if eq (head $.FilePath) "pages" }}
-      <div class='ma2'><a href='/{{ join "files" $.SitePrefix "createfile" }}/?parent={{ join "output" (trimSuffix (tail $.FilePath) ".html") }}' class='nowrap'>📄 create file</a></div>
-      <hr>
-      <form method='post' enctype='multipart/form-data' action='/{{ join "files" $.SitePrefix "uploadfile" }}/' class='pa2'>
-        <input type='hidden' name='parent' value='{{ join "output" (trimSuffix (tail $.FilePath) ".html") }}'>
-        <input type='file' name='file' style='max-width: 220px;' accept='.jpeg,.jpg,.png,.webp,.gif,.html,.css,.js,.md,.txt' multiple>
-        <input placeholder='paste from clipboard here' style='min-width: 200px;' class='mt2' data-paste='{"name":"file","ext":[".jpeg",".jpg",".png",".webp",".gif",".html",".css",".js",".md",".txt"]}'>
-        <button type='submit' class='button ba br2 pa2 w-100 mt2'>upload</button>
-      </form>
-      {{- else }}
-      <form method='post' enctype='multipart/form-data' action='/{{ join "files" $.SitePrefix "uploadfile" }}/' class='pa2'>
-        <input type='hidden' name='parent' value='{{ join "output" (trimSuffix $.FilePath ".md") }}'>
-        <input type='file' name='file' style='max-width: 220px;' accept='.jpeg,.jpg,.png,.webp,.gif' multiple>
-        <input placeholder='paste from clipboard here' style='min-width: 200px;' class='mt2' data-paste='{"name":"file","ext":[".jpeg",".jpg",".png",".webp",".gif"]}'>
-        <button type='submit' class='button ba br2 pa2 w-100 mt2'>upload</button>
-      </form>
-      {{- end }}
-    </div>
-  </details>
 </div>
   {{- if $.Assets }}
   <ul class='grid grid-cols-auto-150px grid-gap-3 mv2'>
